<resources>
    <string name="app_name">舔狗日记</string>
    <string name="title_home">我就要舔狗</string>
    <string name="title_dashboard">再舔一次</string>
    <string name="title_notifications">舔狗大全</string>
    <string name="f_name">舔她（Name）</string>
    <string name="phone_no">她的秘密（Phone）</string>
    <string name="finish">舔了</string>
    <string name="reset">我配不上她</string>
    <string name="toast_adduser">我开始舔</string>
    <string name="toast_adduBill">我喜欢这种舔的感觉</string>

    <string name="AddUser">AddParent</string>
    <string name="Bill_name">我舔了她，因为：</string>
    <string name="Bill_Date">我这一天舔了她:</string>
    <string name="Bill_kind">我舔她的方法为：</string>
    <string name="Bill_money">舔她我花了：</string>
    <string name="Bill_Payer">我舔了她：</string>
    <string name="Bill_content">舔狗感受：</string>
    <string name="addUser_button">我想再舔一个</string>
    <string name="realse">不，她约了别人</string>

    <string-array name="kinds">
        <item>吃饭</item>
        <item>看电影</item>
        <item>逛街</item>
        <item>礼物</item>
        <item>开房</item>
    </string-array>
</resources>
