<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".AddUserActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/f_name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textSize="25sp" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>