<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_name" />

        <EditText
            android:id="@+id/Bill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_Date" />

        <TextView
            android:id="@+id/Bill_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:padding="8dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_kind" />

        <Spinner
            android:id="@+id/Bill_kind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/kinds" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_money" />

        <EditText
            android:id="@+id/Bill_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_Payer" />

        <TextView
            android:id="@+id/Bill_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:padding="8dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:text="@string/Bill_content" />

        <EditText
            android:id="@+id/Bill_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/OK_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

    <Button
        android:id="@+id/realse_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realse" />

</LinearLayout>